# ROS2-Wayfarer

./: README.md
install/: local_setup.sh  setup.sh
install/acl_msgs/share/acl_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_computer/share/my_computer/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_computer_goal/lib/my_computer_goal/: goal_pub_node
install/my_computer_goal/share/my_computer_goal/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_computer_mocap/lib/my_computer_mocap/: mocap_pub_node
install/my_computer_mocap/share/my_computer_mocap/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_computer_plot/lib/my_computer_plot/: plot_sub_node
install/my_computer_plot/share/my_computer_plot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_robot/share/my_robot/: package.sh  package.xml
install/my_robot_controller/lib/my_robot_controller/: controller_node
install/my_robot_controller/share/my_robot_controller/: package.sh  package.xml
install/my_robot_data/lib/my_robot_data/: data_pub_node
install/my_robot_data/share/my_robot_data/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: host_computer_launch.py  robot_launch.py
log/: latest_build
src/: CMakeLists.txt  package.xml
src/OptiTrack-Motive-2_Client/: CMakeLists.txt  package.xml
src/OptiTrack-Motive-2_Client/src/: optitrack_motive_2_client_node.cpp
src/acl_msgs/: CMakeLists.txt  package.xml
src/acl_msgs/msg/: IMU.msg  QuadAttCmd.msg  QuadMotors.msg  SMCData.msg  State.msg  ViconState.msg
src/acl_msgs_1/: package.xml
src/my_computer/my_computer/: setup.cfg  setup.py
src/my_computer/my_computer_goal/: package.xml  setup.cfg  setup.py
src/my_computer/my_computer_goal/my_computer_goal/: goal_pub_node.py
src/my_computer/my_computer_mocap/: package.xml  setup.cfg  setup.py
src/my_computer/my_computer_mocap/my_computer_mocap/: mocap_pub_node.py
src/my_computer/my_computer_plot/: package.xml  setup.cfg  setup.py
src/my_computer/my_computer_plot/my_computer_plot/: plot_sub_node.py
src/my_network/: package.xml  setup.cfg  setup.py
src/my_network/my_network/: optitrack_client_node.py
src/my_network/src/: optitrack_client_node.cpp
src/my_robot/my_robot/: setup.py
src/my_robot/my_robot_controller/: package.xml  setup.py
src/my_robot/my_robot_data/: package.xml  setup.cfg  setup.py
src/my_robot/my_robot_data/my_robot_data/: data_pub_node.py
